@@ -1,4 +1,4 @@
 @echo off
 set MELO_HOME=%~dp0..
-java -jar "%MELO_HOME%\melo.jar" %*
+java --enable-native-access=ALL-UNNAMED -jar "%MELO_HOME%\melo.jar" %*
 
